Merge pull request #6 from Oketha-Senadheera/copilot/fix-auth-filter-errors
Fix Java 8 compatibility issues - replace Java 9+ features with Java 8 alternatives Oketha-Senadheera/resqnet@eab7321120a8b92720a59816868ad1108e4de13c